# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
# и включите сюда подпроекты.
#
cmake_minimum_required (VERSION 3.8)

project ("Лабораторные по ООПСЗИ")

# Включите подпроекты.
add_subdirectory ("CMakeProject1")
add_subdirectory ("CMakeProject2")
add_subdirectory ("CMakeProject3")
add_subdirectory ("CMakeProject4")
add_subdirectory ("CMakeProject5")
add_subdirectory ("CMakeProject6")
